[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markitdown"
version = "0.1.0"
description = "A utility for converting various file formats to Markdown"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Fork maintainer" }
]
keywords = ["markdown", "conversion", "documents", "pdf", "docx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "enpyxl>=3.0
[project.optional-dependencies
    "pytest-cov    "pre-commit>=3.0",
]
audio = [
    "openai>=1.0.0",
    "pydub>=0.25.0",
]
image = [
    "openai>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
markitdown = "markitdown.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/markitdown"
Repository = "https://github.com/your-org/markitdown"
Issues = "https://github.com/your-org/markitdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# show summary of all test results for easier debugging
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/markitdown"]
omit = ["tests/*"]
